# GreensV4

./: .gitignore  CMakeLists.txt  blood.cpp  convect.cpp  gaussj.cpp  greens.cpp  main.cpp  makefile
